syntax = "proto3";

package orderclient;

option go_package = "order";

// 创建

message CreareRequest {
    int64 Uid = 1;
    int64 Pid = 2;
    int64 Amount = 3;
    int64 Status = 4;
}

message CreateResponse {
    int64 id = 1;
}

// 修改
message UpdateRequest {
    int64 id =1;
    int64 Uid =2;
    int64 Pid =3;
    int64 Amount = 4;
    int64 Status =5;
}
message UpdateResponse {
    int64 id =1;
    int64 Uid =2;
    int64 Pid =3;
    int64 Amount = 4;
    int64 Status = 5;
}
// 删除
message RemoveRequest {
    int64 id = 1;
}

message RemoveResponse {

}
// 详情 
message DetailRequest {
    int64 id = 1;
}

message DetailResponse {
    int64 id = 1;
    int64 Uid = 2;
    int64 Pid = 3;
    int64 Amount= 4;
    int64 Status = 5;

}
// 列表
message ListRequest {
    int64 uid =1;
}
message ListResponse {
    repeated DetailResponse data = 1;
}

// 支付
message PaidRequest {
    int64 id =1;
}
message PaidResponse {
    
}

service Order {
    rpc Create(CreareRequest) returns(CreateResponse);
    rpc Update(UpdateRequest) returns(UpdateResponse);
    rpc Remove(RemoveRequest) returns(RemoveResponse);
    rpc Detail(DetailRequest) returns(DetailResponse);
    rpc List(ListRequest) returns(ListResponse);
    rpc Paid(PaidRequest) returns(PaidResponse);
}

